--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/style.css">
+    <link rel="stylesheet" href="assets/style.css">
     <title>ohmyfood</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +18,7 @@
     
 
 <!-- Header -->
-    <header class="header">
+    <header class="header" id="homepage__top">
         <h1 class="header__logo">ohmyfood</h1>
     </header>
 
@@ -68,8 +68,8 @@
             <div class="container">
                 <h2 class="restaurants__title">Restaurants</h2>
                 <div class="cards">
-                    <a class="card" href="/restaurants/menus/la-palette-du-gout.html">
-                        <img src="/assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant la palette du goût" class="card__img">
+                    <a class="card" href="./restaurants/menus/la-palette-du-gout.html">
+                        <img src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant la palette du goût" class="card__img">
                         <span class="card__new">Nouveau</span>
                         <div class="card__footer">
                             <div class="card__content">
@@ -82,8 +82,8 @@
                             </div>
                         </div>
                     </a>
-                    <a class="card" href="/restaurants/menus/la-note-enchantee.html">
-                        <img src="/assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaurant la note enchantée" class="card__img">
+                    <a class="card" href="./restaurants/menus/la-note-enchantee.html">
+                        <img src="./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaurant la note enchantée" class="card__img">
                         <span class="card__new">Nouveau</span>
                         <div class="card__footer">
                             <div class="card__content">
@@ -96,8 +96,8 @@
                             </div>
                         </div>
                     </a>
-                    <a class="card" href="/restaurants/menus/a-la-francaise.html">
-                        <img src="/assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="restaurant à la française" class="card__img">
+                    <a class="card" href="./restaurants/menus/a-la-francaise.html">
+                        <img src="./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="restaurant à la française" class="card__img">
                         <div class="card__footer">
                             <div class="card__content">
                                 <h3 class="card__title">À la française</h3>
@@ -109,8 +109,8 @@
                             </div>
                         </div>
                     </a>
-                    <a class="card" href="/restaurants/menus/le-delice-des-sens.html">
-                        <img src="/assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="restaurant le délice de sens" class="card__img">
+                    <a class="card" href="./restaurants/menus/le-delice-des-sens.html">
+                        <img src="./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="restaurant le délice de sens" class="card__img">
                         <div class="card__footer">
                             <div class="card__content">
                                 <h3 class="card__title">Le délice de sens</h3>
@@ -130,7 +130,7 @@
 <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <a href="/index.html"><span class="footer__logo">ohmyfood</span></a>
+            <a href="#homepage__top"><span class="footer__logo">ohmyfood</span></a>
             <ul class="footer__menu">
                 <li class="footer__page">
                     <a class="footer__link" href="#"><i class="fa-solid fa-utensils footer__icon"></i>Proposer un restaurant</a>
