--- a/restaurants/menus/la-note-enchantee.html
+++ b/restaurants/menus/la-note-enchantee.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/style.css">
+    <link rel="stylesheet" href="../../assets/style.css">
     <title>Restaurant : La note enchantée</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,11 +18,11 @@
 
     <!-- Header -->
     <header class="header header--restaurants">
-        <a href="/index.html"><i class="fa-solid fa-arrow-left header__back"></i></a>
+        <a href="../../index.html"><i class="fa-solid fa-arrow-left header__back"></i></a>
         <h1 class="header__logo">ohmyfood</h1>
     </header>
 
-    <img src="/assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaurant: la note enchantée" class="restaurant__bg">
+    <img src="../../assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaurant: la note enchantée" class="restaurant__bg">
 
     <main class="pages__restaurants">
         <div class="menu">
@@ -185,7 +185,7 @@
         <!-- Footer -->
         <footer class="footer">
             <div class="container">
-                <a href="/index.html"><span class="footer__logo">ohmyfood</span></a>
+                <a href="../../index.html"><span class="footer__logo">ohmyfood</span></a>
                 <ul class="footer__menu">
                     <li class="footer__page">
                         <a class="footer__link" href="#"><i class="fa-solid fa-utensils footer__icon"></i>Proposer un restaurant</a>
